--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,10 @@ app:
 movies:
   type: rest
   resource: AppBundle\Controller\MoviesController
+
+movies_post:
+  path: /movies
+  methods: [POST]
+  defaults:
+      _controller: AppBundle\Controller\MoviesController:postMoviesAction
+      _format: json
